force-app/main/default/objects/Activity/fields/MESSENGER__Message_Result__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Message_Result__c</fullName>
    <label>Message Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>