force-app/main/default/objects/Activity/fields/MESSENGER__Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Message_Subject__c</fullName>
    <label>Message Subject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>