force-app/main/default/objects/Activity/fields/MESSENGER__Sent_Status__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Sent_Status__c</fullName>
    <label>Sent Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>